fixed menu color and spacing (#119)

--- a/app/components/common/Menu/menu.scss
+++ b/app/components/common/Menu/menu.scss
@@ -2,4 +2,8 @@
   .pt-transition-container {
     margin-left: 0.5rem !important;
   }
+
+  .pt-popover {
+    margin-top: 5px !important;
+  }
 }
